تعديل ROI + تحديث CSS

--- a/roi.html
+++ b/roi.html
@@ -37,7 +37,7 @@
     .row-3{display:grid;grid-template-columns:1fr 1fr 1fr;gap:12px}
     .row-1{display:grid;grid-template-columns:1fr;gap:12px}
     label{display:block;font-size:.92rem;margin-bottom:6px;color:var(--muted)}
-    input,select,button,textarea{width:100%;padding:12px;border-radius:12px;border:1px solid var(--border);background:#0b1220;color:var(--text);font-size:1rem}
+    input,select,button,textarea{width:100%;padding:12px;border-radius:12px;border:1px solid #e6eef5;background:#ffffff;color:#0b1014;font-size:1rem}
     input::placeholder{color:#64748b}
     .muted{color:var(--muted);font-size:.9rem}
     .badge{display:inline-flex;align-items:center;gap:8px;border:1px solid var(--border);padding:8px 12px;border-radius:999px;background:#0b1220}
@@ -54,7 +54,7 @@
     .no{color:#3f0b0b;background:rgba(239,68,68,.2);border-color:#7f1d1d}
     .actions{display:flex;gap:10px;margin-top:12px;flex-wrap:wrap}
     .btn{cursor:pointer;background:linear-gradient(135deg,#22c55e,#16a34a);border:none;color:#052b10;font-weight:700}
-    .btn-outline{background:transparent;border:1px solid var(--border);color:#e5e7eb}
+    .btn-outline{background:transparent;border:1px solid #e6eef5;color:#0b1014}
     .small{font-size:.9rem}
     .list{margin:0;padding-right:18px}
     .footer{margin-top:18px;color:var(--muted);font-size:.85rem}
