--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <!-- Top CTA bar (1/3) -->
 <div id="top-cta-bar" class="cta-bar" role="region" aria-label="Top quick contact bar">
-  <span class="cta-text" id="topbar-text">أمورك طيبة — كلمنا الآن</span>
+  <span class="cta-text" id="topbar-text">أمورك طيبة؟</span>
   <a href="#contact" class="cta-pill" id="topbar-btn">كلمنا الآن</a>
   <a href="#estimator" class="cta-ghost" id="topbar-ghost">أتحقق إذا أموري طيبة</a>
 </div>
