--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <a href="#estimator" class="cta-ghost" id="topbar-ghost">أتحقق إذا أموري طيبة</a>
 </div>
 
-<header class="header" id="home">
+<header class="site-header" id="home">
   <div class="container header-inner">
     <a href="#home" class="logo">
       <img src="assets/logo.png" alt="HEAO logo" class="logo-glow">
